--- a/Repositories/packages.config
+++ b/Repositories/packages.config
@@ -3,8 +3,10 @@
   <package id="Azure.Core" version="1.25.0" targetFramework="net472" />
   <package id="Azure.Identity" version="1.7.0" targetFramework="net472" />
   <package id="Dapper" version="2.0.123" targetFramework="net472" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="5.1.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="5.1.0" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.47.2" targetFramework="net472" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.19.3" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Abstractions" version="6.24.0" targetFramework="net472" />
