--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -4,10 +4,14 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-	<connectionStrings>
-		<add name="db" connectionString="Server=LAPTOP-OKS844B0\SQLEXPRESS;Initial Catalog=A2003;User Id=dev;Password=Aa12345;MultipleActiveResultSets=True" />
-	</connectionStrings>
-	
+  <configSections>
+    
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <!--<add name="db" connectionString="Server=LAPTOP-OKS844B0\SQLEXPRESS;Initial Catalog=A2003;User Id=dev;Password=Aa12345;MultipleActiveResultSets=True" />-->
+    <add name="A2003Entities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-OKS844B0\SQLEXPRESS;initial catalog=A2003;persist security info=True;user id=dev;password=Aa12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -96,4 +100,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
